Proyectos se apilan bien

--- a/index-cv.html
+++ b/index-cv.html
@@ -96,8 +96,8 @@
 <section class="container">
     <h3 class="col-12">Proyectos</h3>
     <section class="row" class="proyectos">
-        <h4 class="col-sm-12 col-lg-6"><a href="" target="_blank">Landing page website</a></h4>
-        <h4 class="col-sm-12 col-lg-6"><a href="" target="_blank">Páginas web</a></h4>
+        <h4 class="col-sm-12 col-md-6"><a href="" target="_blank">Landing page website</a></h4>
+        <h4 class="col-sm-12 col-md-6"><a href="" target="_blank">Páginas web</a></h4>
     </section>
 </section>
 
