--- a/contacto-cv.html
+++ b/contacto-cv.html
@@ -84,7 +84,7 @@
        
         <div id="redes">
             <ul>
-                <li><a href="https://www.linkedin.com/in/mariaagustinaquadro/"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/mariaagustinaquadro/"  target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
             </ul>
         </div>
     </footer>
