--- a/contacto-cv.html
+++ b/contacto-cv.html
@@ -4,18 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="decription" content=”CV”> <!--en esta posición debería estar-->
+    <meta name="decription" content=”CV”>
     <meta property="og:type" content="article">
     <meta property="og:title" content="Agustina Quadro">
     <meta property="og:description" content="CV">
-    <meta property="og:image" content="LINK A LA IMAGEN DESTACADA">
-    <meta property="og:url" content="ENLACE PERMANENTE">
+    <meta property="og:url" content="AgustinaQuadro.com">
     <meta property="og:site_name" content="AgustinaQuadro.com">
-    <link rel=”icon” href=”” type="image/x-icon">
-    <!--agregar icono-->
-    <!--agrear og etiqueta de twitter y facebook-->
+     <title>AgustinaQuadro.com/Contacto</title>
+  
     <script src="https://kit.fontawesome.com/685952ad6b.js" crossorigin="anonymous"></script>
-    <title>AgustinaQuadro.com/Contacto</title>
+   
 
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="style-contacto-cv.css">
