--- a/Proyectos JavaScript/counter.html
+++ b/Proyectos JavaScript/counter.html
@@ -5,7 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style_counter.css">
-    <title>Document</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Montserrat:wght@100&family=Padyakke+Expanded+One&display=swap" rel="stylesheet">
+
+
+    <title>Chronometer</title>
 </head>
 <body>
     <header>
@@ -16,10 +22,18 @@
         <h3>:</h3>
         <h2 id="minute">00</h2>
         <h3>:</h3>
-        <h2 id="second">00</h2>
+        <h2 id="second">00</h2> 
+    </main>
+    <section>
         <button onclick="count()">Start</button><script src="counter.js"></script>
         <button id="stop" class="hidden">Stop</button>
-    </main>
+    </section>
+    <section>
+        <small>Press 'Start' to restart the chronometer</small>
+    </section>
+   
+    
+   
     
 </body>
 </html>
