--- a/Proyectos JavaScript/counter.html
+++ b/Proyectos JavaScript/counter.html
@@ -14,6 +14,10 @@
     <title>Chronometer</title>
 </head>
 <body>
+    <div>
+    <aside>
+        <button id="night" >Night Mode</button>
+    </aside>
     <header>
         <h1>Chronometer</h1>
     </header>
@@ -31,6 +35,7 @@
     <section>
         <small>Press 'Start' to restart the chronometer</small>
     </section>
+</div>
    
     
    
