--- a/Proyectos JavaScript/counter.html
+++ b/Proyectos JavaScript/counter.html
@@ -10,13 +10,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Montserrat:wght@100&family=Padyakke+Expanded+One&display=swap" rel="stylesheet">
 
+    <script src="night.js" defer></script>
+
 
     <title>Chronometer</title>
 </head>
 <body>
     <div>
     <aside>
-        <button id="night" >Night Mode</button>
+        <button id="night">Night Mode</button>
     </aside>
     <header>
         <h1>Chronometer</h1>
