Tag detail for projects

--- a/index.html
+++ b/index.html
@@ -94,8 +94,14 @@
 <section class="container">
     <h3 class="col-12">Proyectos</h3>
     <section class="row" class="proyectos">
-        <h4 class="col-sm-12 col-md-6"><a href="" target="_blank">Landing page website</a></h4>
-        <h4 class="col-sm-12 col-md-6"><a href="" target="_blank">Páginas web</a></h4>
+        <details class="col-sm-12 col-md-6">
+            <summary><h4 >Landing page website</h4></summary>
+            <a href="Proyectos JavaScript/counter.html" target="_blank">Chronometer</a>
+        </details>
+        <details class="col-sm-12 col-md-6">
+            <summary><h4>Páginas web</h4></summary>
+            <a href="" target="_blank"></a>
+        </details>
     </section>
 </section>
 
